--- a/BooksServer/build.gradle
+++ b/BooksServer/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-access', version: '1.0.13'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.0.13'
     compile group: 'ch.qos.logback', name: 'logback-core', version: '1.0.13'
+
+    testCompile group: 'org.easymock', name: 'easymock', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
