added a WEB-INF dir, and some tests

--- a/BooksServer/build.gradle
+++ b/BooksServer/build.gradle
@@ -13,6 +13,9 @@ sourceSets {
     }
 }
 
+// Set the resources directory to contain the web-app's resources. Brilliant!
+project.webAppDirName = 'resources'
+
 repositories {
     mavenCentral()
 }
