--- a/BooksServer/build.gradle
+++ b/BooksServer/build.gradle
@@ -1,4 +1,6 @@
-apply plugin: 'java'
+apply plugin: "java"
+apply plugin: "war"
+
 sourceCompatibility = 1.7
 version = '1.0'
 
@@ -35,4 +37,20 @@ dependencies {
 
     testCompile group: 'org.easymock', name: 'easymock', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
+}
+
+task deployToTomcat(type: Copy) {
+    ENV = System.getenv()
+    tomcatHome = ENV['TOMCAT_HOME']
+
+    if(tomcatHome != null) {
+        println "Deploying war file onto Tomcat, at: " + tomcatHome
+        copy{
+            from "${buildDir}\\libs"
+            into "${tomcatHome}/webapps"
+            include '*.war'
+        }
+    } else {
+        println "Failed copying, TOMCAT_HOME ENV variable wasn't found."
+    }
 }
