--- a/BooksServer/build.gradle
+++ b/BooksServer/build.gradle
@@ -35,6 +35,12 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.0.13'
     compile group: 'ch.qos.logback', name: 'logback-core', version: '1.0.13'
 
+    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+    compile group: 'javax.servlet', name: 'jstl', version: '1.2'
+
+    compile 'org.springframework:spring-core:3.2.3.RELEASE'
+    compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
+
     testCompile group: 'org.easymock', name: 'easymock', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
