--- a/BooksServer/build.gradle
+++ b/BooksServer/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
 
+    compile group: "com.fasterxml.jackson.core", name: "jackson-databind", version:"2.2.2"
+
     compile 'org.springframework:spring-core:3.2.3.RELEASE'
     compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
 
