--- a/BooksServer/build.gradle
+++ b/BooksServer/build.gradle
@@ -9,9 +9,6 @@ sourceSets {
         java {
             srcDir 'src'
         }
-        resources {
-            srcDir 'resources'
-        }
     }
 }
 
@@ -29,19 +26,29 @@ jar {
 }
 
 dependencies {
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.5'
+    // Guava
     compile group: 'com.google.guava', name: 'guava', version: '15.0'
+    // Logging
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.5'
     compile group: 'ch.qos.logback', name: 'logback-access', version: '1.0.13'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.0.13'
     compile group: 'ch.qos.logback', name: 'logback-core', version: '1.0.13'
+    // ORM
+//    compile("org.springframework.boot:spring-boot-starter-web:0.5.0.M6")
+    compile group: "org.springframework",       name: "spring-orm",                 version: "3.2.3.RELEASE"
+    compile group: "org.springframework",       name: "spring-jdbc",                version: "3.2.3.RELEASE"
+    compile group: "org.springframework.data",  name: "spring-data-jpa",            version: "1.4.1.RELEASE"
+    compile group: "org.springframework",       name: "spring-core",                version: "3.2.3.RELEASE"
+    compile group: "org.springframework",       name: "spring-beans",               version: "3.2.3.RELEASE"
+    compile group: "org.springframework",       name: "spring-webmvc",              version: "3.2.3.RELEASE"
+
+    compile group: "org.hibernate",             name: "hibernate-entitymanager",    version: "4.2.1.Final"
+    compile group: "com.h2database",            name:"h2",                          version: "1.3.172"
 
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
 
     compile group: "com.fasterxml.jackson.core", name: "jackson-databind", version:"2.2.2"
-
-    compile 'org.springframework:spring-core:3.2.3.RELEASE'
-    compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
 
     testCompile group: 'org.easymock', name: 'easymock', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
@@ -52,10 +59,10 @@ task deployToTomcat(type: Copy) {
     tomcatHome = ENV['TOMCAT_HOME']
 
     if(tomcatHome != null) {
-        println "Deploying war file onto Tomcat, at: " + tomcatHome
+        println "Deploying war file onto Tomcat, at: " + tomcatHome + "\\webapps"
         copy{
             from "${buildDir}\\libs"
-            into "${tomcatHome}/webapps"
+            into "${tomcatHome}\\webapps"
             include '*.war'
         }
     } else {
