initial rest get for books

--- a/BooksServer/resources/WEB-INF/web.xml
+++ b/BooksServer/resources/WEB-INF/web.xml
@@ -41,9 +41,9 @@
         </init-param>
     </servlet>
 
-    <!-- map all requests for /main/* to the dispatcher servlet -->
+    <!-- map all requests for /* to the dispatcher servlet -->
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/api/*</url-pattern>
     </servlet-mapping>
 </web-app>
