--- a/BooksServer/build.gradle
+++ b/BooksServer/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
 
-    compile group: "com.fasterxml.jackson.core", name: "jackson-databind", version:"2.2.2"
+    compile group: "org.codehaus.jackson", name: "jackson-mapper-asl", version:"1.9.12"
 
     testCompile group: 'org.easymock', name: 'easymock', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
