--- a/BooksServer/build.gradle
+++ b/BooksServer/build.gradle
@@ -42,8 +42,9 @@ dependencies {
     compile group: "org.springframework",       name: "spring-beans",               version: "3.2.3.RELEASE"
     compile group: "org.springframework",       name: "spring-webmvc",              version: "3.2.3.RELEASE"
 
-    compile group: "org.hibernate",             name: "hibernate-entitymanager",    version: "4.2.1.Final"
-    compile group: "com.h2database",            name:"h2",                          version: "1.3.172"
+    compile group: "org.hibernate",                     name: "hibernate-entitymanager",    version: "4.2.1.Final"
+    compile group: "org.hibernate.javax.persistence",   name: "hibernate-jpa-2.0-api",      version: "1.0.1.Final"
+    compile group: "com.h2database",                    name:"h2",                          version: "1.3.173"
 
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
