--- a/BooksServer/resources/WEB-INF/web.xml
+++ b/BooksServer/resources/WEB-INF/web.xml
@@ -13,7 +13,7 @@
          specified for component-scanning -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>java.org.nm.books.config.JpaConfig</param-value>
+        <param-value>org.nm.books.config.JpaConfig</param-value>
     </context-param>
 
     <!-- Bootstrap the root application context as usual using ContextLoaderListener -->
