--- a/BooksServer/package.json
+++ b/BooksServer/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-concat-css": "~0.3.1"
   }
 }
